--- a/Review.html
+++ b/Review.html
@@ -14,7 +14,7 @@
   heading like.....Name of sender=Leo..-->
 
 
-  <form action="mailto:info@abhyudaysharma01.com" method="post" enctype="text/plain">
+  <form action="mailto:abhyudaysharma01@gmail.com" method="post" enctype="text/plain">
 <!-- through action we are directing the site to go after submit button will be pressed by thr viewer.
 posting the review of the viewer to mail or directing the site to another page.
 enctype is used to get the simple language of data given i.e is readable without any symbols apart from the symbols which user has given in the review -->
